# fairseq

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  1.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Comparable.py  INSTALL.md  LICENSE  MANIFEST.in  PATENTS  PDF2Audio.py  README.fb  README.md  README.moe.md  RELEASE.md  ROUGE_with_ranked.pl  async_event_loop.py  average_meter.py  bleu.py  call_binarize.sh  call_generate.sh  call_train.sh  cmd.sh  commands_arbabu.txt  commands_wall.txt  commands_wall_speech.txt  conv_tbc.py  data.py  data2vec.json  debug.py  dictionary.py  distributed_train.py  dump_lm_states.py  encode.py  eval_lm.py  fairseq_evaluation.sh  fb_train.py  fine_tune.sh  (+70 more)
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  stale.yml
Comparable/: files2.list
clib/: temporal_convolution_tbc.cpp  temporal_convolution_tbc.h
config/: config.yaml  config_eval_lm.yaml
data/: README.md  prepare-iwslt14.sh  prepare-wmt14en2de.sh  prepare-wmt14en2fr.sh
data2vec_experiment/: exp2.py  extract_model_structure.py  print_structure.py
dict/: ._dict.en.txt  ._dict.hu.txt  dict.en.txt  dict.hu.txt
docs/: Makefile  command_line_tools.rst  conf.py  criterions.rst  data.rst  docutils.conf  getting_started.rst  hydra_integration.md  index.rst  lr_scheduler.rst  make.bat  models.rst  modules.rst  optim.rst  overview.rst  requirements.txt  tasks.rst  tutorial_classifying_names.rst  tutorial_simple_lstm.rst
examples/: .gitignore  __init__.py
fairseq/: __init__.py  __main__.py  binarizer.py  bleu.py  checkpoint_utils.py  constraints.py  data.py  deepspeed_trainer.py  dictionary.py  distributed_utils.py  eval_scorer.py  fb_hub.py  fb_pathhandlers.py  fb_pathmgr.py  fb_sequence_generator.py  fb_simple_sequence_generator.py  file_chunker_utils.py  file_io.py  file_utils.py  fp16_trainer.py  hub_utils.py  incrcorr.py  incremental_decoding_utils.py  indexed_dataset.py  iterative_refinement_generator.py  legacy_distributed_data_parallel.py  meters.py  metrics.py  moe_checkpoint_utils.py  multiprocessing_event_loop.py  multiprocessing_pdb.py  multiprocessing_trainer.py  nag.py  nan_detector.py  nccl.py  ngram_repeat_block.py  options.py  pdb.py  progress_bar.py  quantization_utils.py  (+16 more)
fairseq_cli/: Comparable.py  Comparable2.py  Comparable3.py  Comparable4.py  eval_lm.py  fb_train.py  generate.py  hydra_train.py  hydra_validate.py  interactive.py  preprocess.py  quantize_pq.py  quantize_scalar.py  score.py  setup.py  train.py  train_old.py  traincomp.py  validate.py  weight_viz.py
fb_sweep/: README.md  agg_results.py  sweep_adaptive_span.py  sweep_bart_cnn.py  sweep_bart_large.py  sweep_ctc_asr.py  sweep_dummy_lm.py  sweep_gpt2_lm.py  sweep_lm_data.py  sweep_lm_enwik8_transformer_xl.py  sweep_lm_wikitext103_transformer.py  sweep_lm_wikitext103_transformer_xl.py  sweep_mbart.py  sweep_megatron_lm.py  sweep_multilingual_masked_lm.py  sweep_nonautoregressive_translation.py  sweep_ooo_bi_transformer_big.py  sweep_ooo_bi_transformer_huge.py  sweep_roberta_base.py  sweep_roberta_large_glue.py  sweep_seq2seq_finetuning_nlu.py  (+8 more)
(+3657 files in other folders)
