[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "cython",
  "numpy>=1.24.2",
  "torch>=2.4.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "fairseq"
dynamic = ["version"]
description = "Facebook AI Research Sequence-to-Sequence Toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Facebook AI Research"}
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cffi",
  "cython",
  "hydra-core>=1.3.2",
  "omegaconf>=2.1.0",
  "numpy>=1.24.2",
  "regex",
  "sacrebleu>=1.4.12",
  "torch>=2.4.0",
  "tqdm",
  "bitarray",
  "torchaudio>=2.4.0",
  "torchvision>=0.19.0",
  "scikit-learn",
  "packaging",
  "scipy>=1.15.0",
  "pandas>=2.2.0",
  "transformers>=4.51.3"
]

[project.optional-dependencies]
dev = ["flake8", "pytest", "black==22.3.0"]
docs = ["sphinx", "sphinx-argparse"]

[project.urls]
"Homepage" = "https://github.com/pytorch/fairseq"
"Bug Tracker" = "https://github.com/pytorch/fairseq/issues"

[tool.black]
extend-exclude = '''
(
^/examples/|
^/fairseq/model_parallel/megatron|
^/build/
)
'''

[tool.isort]
profile = "black"
known_third_party = "_cffi_backend,agg_results,aml,bitarray,boto3,botocore,dump_hubert_feature,dynamicconv_cuda,editdistance,faiss,fasttext,feature_utils,ffmpeg,g2p_en,h5py,hydra,hypothesis,indicnlp,inflect,iopath,joblib,kaldi_io,kenlm,libfb,librosa,lightconv_cuda,matplotlib,misc,mmpt,mmpt_cli,model,nltk,npy_append_array,numpy,omegaconf,pandas,pathbuilder,preprocessing,progressbar,pythainlp,random_sequence_shuffler,regex,sacrebleu,sacremoses,scipy,sentencepiece,setuptools,six,sklearn,soundfile,sweep,sweep_wmt_en2de_transformer_big_common,tabulate,torch,torchaudio,tqdm,unidecode,utils,videoreader,wav2vec_cluster_faiss,wget,yaml"
skip_gitignore = true
